--- a/photolog/templates/login.html
+++ b/photolog/templates/login.html
@@ -2,7 +2,7 @@
   <form action="" method="post" name="login">
       {{ form.hidden_tag() }}  
     <p>
-      Username:<br>
+    {{ form.username.label }}:<br>
       {{ form.username(size=25) }}<br>
     </p>
     <p>Passwo:<br>
