--- a/photolog/templates/base.html
+++ b/photolog/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <title>Photolog</title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="{{ url_for('static', filename='app.min.css') }}">
   </head>
 
   <body id="top">
@@ -23,6 +23,6 @@
     <div class="wrapper">
       {% block body %}{% endblock %}
     </div> <!-- /wrapper -->
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="{{ url_for('static', filename='blog.min.js') }}"></script>
   </body>
 </html>
